--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
 </head>
 <body>
     <div class="wrapper">
-        
+        <div class="center">
+            <div class="head">
+                <img src="/images/github.jpg" alt="The Github logo" class="top">
+                <h1>Display our blocks!</h1>
+                <img src="/images/catandninja.png" alt="" class="top">
+            </div>
+            <img src="/images/dojocat.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/heisencat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/linkcat.png" alt="A ninja cat." class="blue_character">
+            <img src="/images/ironcat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/defunktocat.png" alt="A ninja cat." class="blue_character">
+            <img src="/images/coder2.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/riddlocat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/chellocat.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/stormtroopocat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/visionary.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/cherry.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/oktobercat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/mario.png" alt="A ninja cat." class="blue_character">
+            <img src="/images/cooler.png" alt="The Heisencat" class="red_character">
+            <img src="/images/jean-luc-picat.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/aidorucat.png" alt="A ninja cat." class="blue_character">
+            <img src="/images/domo-cat.png" alt="The Heisencat" class="red_character">
+            <img src="/images/kantana.jpg" alt="A ninja cat." class="blue_character">
+            <img src="/images/daftpunk.gif" alt="The Heisencat" class="red_character">
+            <img src="/images/codercat.jpg" alt="A ninja cat." class="blue_character">
+
+        </div>
     </div>
 </body>
 </html>
